--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,17 @@
 # any settings specified in this file.
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+
+# Configure Java 17 (required for AGP 8.13.2)
+# Using Android Studio's embedded JDK (JBR 21, compatible with Java 17)
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
+
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Kotlin daemon JVM arguments
+kotlin.daemon.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. For more details, visit
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
