--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
                 <data android:mimeType="application/json" />
                 <data android:mimeType="text/json" />
                 <data android:mimeType="application/zip" />
+                <data android:mimeType="application/x-zip-compressed" />
+                <data android:mimeType="application/x-zip" />
                 <data android:mimeType="application/octet-stream" />
             </intent-filter>
             <intent-filter>
@@ -44,6 +46,8 @@
                 <data android:mimeType="application/json" />
                 <data android:mimeType="text/json" />
                 <data android:mimeType="application/zip" />
+                <data android:mimeType="application/x-zip-compressed" />
+                <data android:mimeType="application/x-zip" />
                 <data android:mimeType="application/octet-stream" />
             </intent-filter>
         </activity>
