--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
                 <data android:mimeType="application/zip" />
                 <data android:mimeType="application/x-zip-compressed" />
                 <data android:mimeType="application/x-zip" />
+                <data android:mimeType="application/gzip" />
+                <data android:mimeType="application/x-gzip" />
                 <data android:mimeType="application/octet-stream" />
             </intent-filter>
             <intent-filter>
@@ -50,6 +52,8 @@
                 <data android:mimeType="application/zip" />
                 <data android:mimeType="application/x-zip-compressed" />
                 <data android:mimeType="application/x-zip" />
+                <data android:mimeType="application/gzip" />
+                <data android:mimeType="application/x-gzip" />
                 <data android:mimeType="application/octet-stream" />
             </intent-filter>
         </activity>
